style: improve responsive design (#31)
* Add container and refine navbar

* Refine homepage, list-candy-machine and create page

* Change sidebarelements styles

* Fix button styles

* Refine spinner color

* Refine error messages

* Refine css

* Add onScroll transition

* refine css

* Reduce padding

* Fix onScroll effect

* Add position fixed to wallet component

* fix: remove unnecessary file

Co-authored-by: Begoña Alvarez <balvarez@boxfish.studio>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,23 @@ a {
   box-sizing: border-box;
 }
 
+.container {
+  padding:5rem 2rem 0 2rem;
+}
+
+.create-form{
+  min-width: 380px;
+}
+@media screen and (min-width: 600px) {
+  .create-form {
+    min-width: 500px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .create-form {
+    min-width: 700px;
+  }
+}
 
 .wallet-adapter-button {
     background-color: transparent;
