--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,37 +6,37 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+        Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .container {
-  padding:5rem 2rem 0 2rem;
+    padding: 5rem 2rem 0 2rem;
 }
 
-.create-form{
-  min-width: 380px;
+.create-form {
+    min-width: 380px;
 }
 @media screen and (min-width: 600px) {
-  .create-form {
-    min-width: 500px;
-  }
+    .create-form {
+        min-width: 500px;
+    }
 }
 @media screen and (min-width: 1024px) {
-  .create-form {
-    min-width: 700px;
-  }
+    .create-form {
+        min-width: 700px;
+    }
 }
 
 .wallet-adapter-button {
@@ -287,7 +287,7 @@ a {
 .wallet-adapter-modal-list .wallet-adapter-button span {
     margin-left: auto;
     font-size: 14px;
-    opacity: .6;
+    opacity: 0.6;
 }
 
 .wallet-adapter-modal-list-more {
