--- a/styles/wallet-adapter.scss
+++ b/styles/wallet-adapter.scss
@@ -1,44 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-html,
-body {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-        Helvetica Neue, sans-serif;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-.container {
-    padding: 5rem 2rem 0 2rem;
-}
-
-.create-form {
-    min-width: 380px;
-}
-@media screen and (min-width: 600px) {
-    .create-form {
-        min-width: 500px;
-    }
-}
-@media screen and (min-width: 1024px) {
-    .create-form {
-        min-width: 700px;
-    }
-}
-
 .wallet-adapter-button {
     background-color: transparent;
     border: none;
@@ -56,7 +15,7 @@ a {
 }
 
 .wallet-adapter-button-trigger {
-    background-color: #512da8;
+    background-color: #512da8 !important;
 }
 
 .wallet-adapter-button:not([disabled]):focus-visible {
