feat: add seach input to candy machines top actions list (#119)
* feat: add recoil & mangifying glass svg

* feat: add search bar and top actions components

* feat: replace search input with search bar component

* feat: add .trim() to search input

* refactor: update top actions and search bar behavior

* feat: remove connected condition from top-actions

* style: add container to TopActions

* feat: set placeholder text of searchbar as prop

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -45,6 +45,14 @@ a {
     @apply text-blue-regular;
 }
 
+.searchbox-candymachine {
+    max-width: 186px;
+}
+
+.top-actions-bar{
+    gap: 1rem;
+}
+
 .wallet-adapter-button {
     background-color: #4e44ce !important;
     padding: 6px 12px !important;
