--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,3 +29,18 @@ body {
     font-size: 12px;
     letter-spacing: -0.15px;
 }
+
+.loading-animation {
+    svg {
+        animation: loading-animation 1s infinite;
+    }
+}
+
+@keyframes loading-animation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(-360deg);
+    }
+}
