feat: refactor reusable popup and add create Candy Machine form (#142)
Co-authored-by: cpl121 <cpeon@boxfish.studio>

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -44,3 +44,37 @@ body {
         transform: rotate(-360deg);
     }
 }
+
+/* Scrollbar CSS */
+/* Firefox */
+* {
+    scrollbar-width: auto;
+    scrollbar-color: #c8c9ca #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #c8c9ca;
+    border-radius: 6px;
+    border: 4px solid #ffffff;
+}
+
+.select-wrapper > select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    outline: none;
+    cursor: pointer;
+    background-image: url("/select-arrow.svg");
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px) center;
+    background-size: 20px;
+}
