feat: add network tps (#151)

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -78,3 +78,7 @@ body {
     background-position: calc(100% - 10px) center;
     background-size: 20px;
 }
+
+.cursor-default {
+    cursor: default;
+}
