--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,8 +16,17 @@ body {
     max-width: 186px;
 }
 
-.top-actions-bar {
-    gap: 1rem;
+.column-gap-1 {
+    column-gap: 1rem;
+}
+
+.nfts-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(185px, 1fr));
+    grid-gap: 1rem;
+    @media screen and (min-width: 1280px) {
+        grid-template-columns: repeat(6, 185px);
+    }
 }
 
 .wallet-adapter-button {
