feat: create app notification manager (#171)
* Add notification manager

* refine notification style

* Add shownotification

* Improve code and cleanup

* Add delete and update candy machine notification

* cleanup

* Fix type

* Refine notification style

* Fix type

* Remove unnecessary state

* amend previous merge

* Add notificationType enum

* Update default timeout

* Add candy machine id to notification

* Add word-break to notification

* cleanup

* Fix: display notification if a wallet is not connected

* Replace notification object with an array

* Remove onClose

* Fix display notifications

* Refactor notifications

* fix: add default fallback to timeout for notification removal

* Fix build

* fix: update automatic deletion logic

* feat: update notification timeout to consider a no timeout

* remove unused import

* add cursor pointer to notification close icon

* refactor: polish notification manager code

* refactor: rename notification function

* feat: decrease notification default timeout

* fix: missing rename in hook

* fix: interation key && update state

* fix: missing ?

* refactor: notification timeouts

Co-authored-by: Agustin Tena <atena@boxfish.studio>
Co-authored-by: Jean Carlo Noguera <jcnoguera@boxfish.studio>
Co-authored-by: Begoña Alvarez <balvarez@boxfish.studio>

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -92,6 +92,22 @@ body {
     cursor: default;
 }
 
+.notifications {
+    z-index: 100;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    width: 100%;
+    @media (min-width: 780px) {
+        bottom: 100px;
+        right: 50px;
+        width: 40%;
+    }
+    > div {
+        margin-top: 8px;
+    }
+}
+
 .upload-button {
     border: 1px solid #1b1f2426;
     padding: 8px 24px;
