refactor: replace `lib` with `@boxfish-studio/candymachine-client-sdk` (#223)
* feat: add lib and start replacing

* feat: replace lib for pkg and update anchor

* feat: move enum

* feat: remove lib

* fix: fix cacheData type

* fix: fix notification style

* fix: fix double call to fetchNfts

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -94,7 +94,7 @@ body {
 
 .notifications {
     z-index: 100;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     right: 0px;
     width: 100%;
